# pokescript

./: .gitignore  Cargo.toml  LICENSE.txt  PKGBUILD  README.md  pokescript.1
src/: main.rs
