[package]
name = "pokescript"
version = "0.1.0"
edition = "2025"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.5"
anyhow = "1.0.75"
colored = "2.0.0"
include_dir = "0.7.3" 